--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 <html>
     <head>
         <title>picofax - coming soon</title>
+        <meta name="title" content="picofax">
+        <meta name="description" content="coming soon">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://picofax.me/">
+        <meta property="og:title" content="picofax">
+        <meta property="og:description" content="coming soon">
+        <meta property="og:image" content="https://picofax.me/og-image.png">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://picofax.me/">
+        <meta property="twitter:title" content="picofax">
+        <meta property="twitter:description" content="coming soon">
+        <meta property="twitter:image" content="https://picofax.me/og-image.png">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+        <meta name="msapplication-TileColor" content="#fedbd1">
+        <meta name="theme-color" content="#ffffff">
+
         <link rel="stylesheet" href="reset.css" />
         <style>
             body {
