--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>picofax - coming soon</title>
         <meta name="title" content="picofax">
         <meta name="description" content="coming soon">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
