--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <style>
             body {
                 background: #fedbd1;
+                padding: 32px;
             }
             @font-face {
                 font-family: balonku;
