--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             body {
                 background: #fedbd1;
                 padding: 32px;
+box-sizing:border-box;
             }
             @font-face {
                 font-family: balonku;
